--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+	"build:server": "npx tsc --project tsconfig.server.json",
+	"start:server": "node server-dist/server.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
