--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
 	}
   },
   "include": ["src"],
+  "exclude": ["server", "server-dist"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
